<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/card_number"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etCardNumber"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/card_holder_name"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etCardHolderName"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/expiry_month"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etExpiryMonth"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/expiry_year"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etExpiryYear"/>
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
              android:text="@string/cvv"/>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
              android:id="@+id/etCVV"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="@string/submit"
    android:id="@+id/btnSubmit"
    />
</LinearLayout>